# allegro_tiled

./: CMakeLists.txt  Makefile
cmake/: allegro_tiled_settings.cmake  allegro_tiled_targets.cmake
cmake/Modules/: FindAllegro.cmake
example/: .gitignore
example/src/: main.c
pc/: allegro_tiled.pc.in
src/: data.h
